--- a/Estilos.css
+++ b/Estilos.css
@@ -10,13 +10,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-.contenedor{
-    width: 90%;
-    max-width: 1200px;
-    margin: auto;
+body{
+    font-family: 'Source Sans Pro', sans-serif;;
 }
-
 .bg_animate{
     width: 100%;
     height: 100vh;
@@ -25,136 +21,147 @@
     overflow: hidden;
     
 }
-
-
-.header_nav{    
+.bg_footer{
     width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #041562;
-    z-index: 3;
+    height: 10vh;
+    background: linear-gradient(to right, #2C2C2C, #0e0e0e);
     
 }
-.header_nav figure{
-    width: 10%;
-    height: 10%;
-    
-   
-}
-.header_nav figure img{
-    width: 60px;
-    height: 60px;
-    
-}
-
-.header_nav .contenedor{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 0;
-    float: center;
-    
-}
-
-.header_nav h1{
-    color: #83FFE6;
-    font-size: 40px;
-   
-   
-}
-
-
-.header_nav ul{
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    list-style: none;
-    font-size: 16px;
-   
-}
-.header_nav li{
-    float: left;
-    font-size: 18px;
-    
-}
-
-.header_nav li a{
-    display: block;
-    color: #83FFE6;
-    text-align: right;
-    margin-right: 10px;
-    text-decoration: none;
-    padding: 20px;
-    
-}
-
-.header_nav li:hover{
-    background-color: #2C2C2C;
-}
-
-.header_nav li a:hover{
-    
-    font-size: 22px;
+#bg_title{
+    font-size: 50px;
+    font-family: 'Source Sans Pro', sans-serif;
     color: #FF5F5F;
-    background-color: #2C2C2C;
-
+    text-align: center;
+    font-family: 'Karla', sans-serif;
+    
 }
-.banner{
+#bg_title2{
+    font-size: 50px;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #FF5F5F;
+    text-align: left;
+    font-family: 'Karla', sans-serif;
+    
+}
+.section_center{
+    
+    width: 60%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100%;
 }
-.banner_title h2{
-    color: #FCFCFC;
-    font-size: 60px;
-    margin-bottom: 20px;
-    font-family: 'Source Sans Pro', sans-serif;
+.section_center2{
+    width: 60%;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.container{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to right, #2C2C2C, #0e0e0e);
+    position: relative;
+    overflow: hidden;
+    
+
+}
+
+
+.img{
+    width: 350px;
+   
     
 }
 
-.banner_title .soy_1{
-    color: #83FFE6;
-    font-size: 16px;
-    text-decoration: none;
-    display: inline-block;
-    background: #11468F;
-    padding: 10px;
-    
+#cotainer{
+    padding: 50px;
 }
-.banner_title .soy_1:hover{
-    font-size: 20px;
-    
+
+
+
+
+
+.glassmorfismo{
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    margin: 20px auto;
+    position: relative;
+    background: rgba(62, 212, 189, 0.728);
+    border-radius: 20px;
+    box-shadow: 12px 8px 32px 10px rgba(63, 22, 129, 0.37);
+    backdrop-filter: blur(6px);
+    border: 2px solid rgba(6, 89, 100, 0.18);
+}
+#glassmorfismo{
+    width: 80%;
+    height: 55%;
+}
+
+.glassmorfismo h1{
+    padding: 20px;
+    font-size: 18px;
+    text-align: left;
+    color: #FCFCFC;
    
 }
 
-.banner_title p{
-    font-size: 18px;
-    text-decoration: solid;
-    text-decoration: underline;
+.glassmorfismo h1 p{
+    font-weight: bolder;
+    font-size: 20;
+    color: #FF5F5F;
 }
 
-.banner_img{
-    width: 600px;
+
+.footer_1 li:hover{
+    background: #383636;
+    font-size: 32px;
+}
+
+.footer_1 nav{
+    padding: 5px;
+}
+.footer_1 ul{
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    list-style: none;
+    font-size: 16px;
+}
+.footer_1 li{
+    float: right;
+    font-size: 20px;
+}
+
+.footer_1 li a{
     display: block;
+    color: #83FFE6;
+    text-align: center;
+    margin-right: 10px;
+    margin: 50px;
 }
 
 
-.banner_img img:hover{
-    box-shadow:  50px #041562;
-    border-radius: 51%;
-    transform: scale(1.1);
-    opacity: .7;
-    transform: rotate(360deg);
-    transition: all .7s ease-in;
-    -webkit-transition: all .7s ease-in;
-    -o-transition: all .7s ease-in;
-    
+
+#contacto_li{
+    float: left;
+}
+
+.footer_1 p{
+    font-size: 30px;
+    text-align: left;
+    display: block;
+    margin: 50px;
+}
+
+#bg_fondo{
+    background: linear-gradient(to right, #2C2C2C, #0e0e0e);
 }
 
 
-/*cuadradoss*/
+
+/*cuadradoss-----------------------------------------------------*/
 .cuadrado{
     
     border-radius: 0%;
@@ -275,272 +282,5 @@
 }
 
 
-/*cuadradoss*/
 
 
-/*section quien soy------------------------------------------------------*/
-.section_animate{
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(to right, #2C2C2C, #0e0e0e);
-    position: relative;
-    overflow: hidden;
-}
-
-
-.soy{
-    
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-}
-
-
-.soy_title{
-    font-family: 'Teko', sans-serif;
-    font-size: 60px;
-    margin-bottom: 20px;
-    color: #FF5F5F;
-}
-.soy_title:hover{
-    font-size: 70px;
-    text-decoration:underline;
-    transition: all .8s ease-in;
-    transform: rotate(360deg);
-    -webkit-transition: all .8s ease-in;
-    -o-transition: all .8s ease-in;
-}
-.soy_title img{
-    width: 50%;
-    height: 60%;
-    margin: 5px;
-    margin-top: 40px;
-    transition: all .8s ease-in;
-    -webkit-transition: all .8s ease-in;
-    -o-transition: all .8s ease-in
-   
-}
-.soy_title img:hover{
-   
-    transform: rotate(390deg);
-    transition: all .8s ease-in;
-    -webkit-transition: all .8s ease-in;
-    -o-transition: all .8s ease-in;
-    border-radius: 60%;
-}
-
-.contenedor_soy{
-    width: 60%;
-    max-width: 1200px;
-    margin: auto;
-}
-
-.glassmorfismo{
-    width: 70%;
-    padding: auto 4rem;
-    height: 390px;
-    margin: 0px auto;
-    position: relative;
-    background: rgba(62, 212, 189, 0.728);
-    border-radius: 20px;
-    box-shadow: 12px 8px 32px 10px rgba(63, 22, 129, 0.37);
-    backdrop-filter: blur(6px);
-    border: 2px solid rgba(6, 89, 100, 0.18);
-}
-.glassmorfismo article{
-    width: 80%;
-    height: 90%;
-    padding: auto 3rem;
-    margin: 2px auto;
-    margin-top: 10px;
-
-}
-.glassmorfismo ul{
-    color: #FCFCFC;
-    padding: 10px;
-}
-.glassmorfismo ul li h1{
-    color: #FCFCFC;
-    font-size: 16px;
-}
-.glassmorfismo ul li h1:hover{
-    font-size: 17px;
-    color: #FF5F5F;
-    transform: rotate(360deg);
-    
-}
-
-/*section servicios------------------------------------------------------*/
-.section2_animate{
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(to right, #2C2C2C, #0e0e0e);
-    position: relative;
-    overflow: hidden;
-}
-
-
-.servicios{
-    
-    width: 50%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
-}
-
-
-.servicios_title{
-    font-family: 'Teko', sans-serif;
-    font-size: 60px;
-    margin-bottom: 20px;
-    color: #FF5F5F;
-}
-
-.servicios_title:hover{
-    font-size: 70px;
-    text-decoration:underline;
-    transition: all .8s ease-in;
-    transform: rotate(360deg);
-    -webkit-transition: all .8s ease-in;
-    -o-transition: all .8s ease-in;
-}
-
-.servicios_soy{
-    width:100%;
-    max-width: 1200px;
-    margin: auto;
-}
-
-.glassmorfismo_2{
-    width: 60%;
-    padding: auto 3rem;
-    height: 390px;
-    margin: 0px auto;
-    position: relative;
-    background: rgba(62, 212, 189, 0.728);
-    border-radius: 20px;
-    box-shadow: 12px 8px 32px 10px rgba(63, 22, 129, 0.37);
-    backdrop-filter: blur(6px);
-    border: 3px solid rgba(178, 94, 25, 0.18);
-}
-.glassmorfismo_2:hover{
-    transition: all .8s ease-in;
-    transform: rotate(360deg);
-    -webkit-transition: all .8s ease-in;
-    -o-transition: all .8s ease-in;
-    border-radius: 30%;
-
-}
-.glassmorfismo_2 article{
-    width: 80%;
-    height: 80%;
-    padding: auto 3rem;
-    margin: 20px auto;
-    margin-top: 30px;
-
-}
-
-.glassmorfismo_2 h1{
-    color: #FCFCFC;
-    font-size: 15px;
-    text-align: center;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-.glassmorfismo_2 h1:hover{
-    font-size: 16px;
-    color: #FF5F5F;
-    transform: rotate(360deg);
-    
-}
-
-/*section curriculum------------------------------------------------------*/
-
-.section3_animate{
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(to right, #2C2C2C, #0e0e0e);
-    position: relative;
-    overflow: hidden;
-}
-.cv_article{
-    
-    width: 100%;
-    text-align: center;
-    height: 100%;
-    top: 25%;
-}
-.cv_article h1{
-    font-size: 60px;
-    color: #FF5F5F;
-    padding: 5%;
-    font-family: 'Teko', sans-serif;
-    
-}
-.cv_article h1:hover{
-    font-size: 65px;
-    text-decoration: underline;
-    opacity: .5;
-}
-.cv_article img{
-    width: 22%;
-    height: 10%;
-    position: relative;
-    margin: 5px;
-}
-
-
-
-
-
-/*footer contacto-----------------------------------------------*/
-
-.footer_1{
-    width: 100%;
-    height: 150px;
-    background: linear-gradient(to right, #4a4848, #1e1d1d);
-    position: relative;
-    overflow: hidden;
-    font-family: 'Karla', sans-serif;
-
-}
-
-
-.footer_1 li:hover{
-    background: #4a4848;
-    font-size: 32px;
-}
-
-.footer_1 nav{
-    padding: 5px;
-}
-.footer_1 ul{
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    list-style: none;
-    font-size: 16px;
-}
-.footer_1 li{
-    float: right;
-    font-size: 20px;
-}
-
-.footer_1 li a{
-    display: block;
-    color: #83FFE6;
-    text-align: center;
-    margin-right: 10px;
-    margin: 50px;
-}
-#contacto{
-    font-size: 30px;
-    text-align: left;
-}
-
-
-#contacto_li{
-    float: left;
-}
